# myproject-template

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  COMMIT_GUIDELINES.md  README.md  environment.yml  pyproject.toml  requirements.txt  ruff.toml
data/: some.yaml  somedata.csv  somexml.xml
docs/myproject/: index.html  some.html
myproject/: __init__.py  some.py
notebooks/: somenotebook.ipynb
scripts/: README.md  generate_conda_file.py
tests/: README.md  some_test.py
